config/common.yml
apiVersion: v1
kind: Service
metadata:
  name: halkyon-nginx
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: halkyon-nginx

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: halkyon-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: halkyon-nginx
    spec:
      containers:
        - image: bitnami/nginx
          imagePullPolicy: Always
          name: halkyon-nginx
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: halkyon-nginx-configs
              # mountPath: /etc/nginx/conf.d
              mountPath: /opt/bitnami/nginx/conf/server_blocks
      # Load the configuration files for nginx
      volumes:
        - name: halkyon-nginx-configs
          configMap:
            name: halkyon-nginx-config
