config/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: halkyon-nginx
spec:
  rules:
    - host: halkyon.io
      http:
        paths:
          - backend:
              serviceName: halkyon-nginx
              servicePort: 80
            path: /
  tls:
    - hosts:
        - halkyon.io
      secretName: halkyon-io-tls
