config/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: halkyon-nginx
spec:
  host: halkyon.io
  tls:
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFTDCCBDSgAwIBAgISA7nVHZnT8uIxelb0EkCpEJWxMA0GCSqGSIb3DQEBCwUA
[...]
      JMsnoeLKl2b7nA0KRRHZXA==
      -----END CERTIFICATE-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEkjCCA3qgAwIBAgIQCgFBQgAAAVOFc2oLheynCDANBgkqhkiG9w0BAQsFADA/
[...]
      KOqkqm57TH2H3eDJAkSnh6/DNFu0Qg==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEogIBAAKCAQEA0KVxn9O3NE9bgm6oF4ztQ/x4o4tDz70YWPfWygMWxFMmy/fd
[...]
      x1mawqMXd5r3dGbmrczIOnHgj2P1XAUrCBfLbxD60od7yZ9BmbQ=
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: halkyon-nginx
    weight: 100
  wildcardPolicy: None
